Add Showcase Hero Unit

--- a/showcase.html
+++ b/showcase.html
@@ -69,10 +69,10 @@
             <!-- optional hero background image & image mask -->
             <!-- <div class="hero-image">
                 <div class="mask"></div>
-                <img src="./img/hero-image.jpeg" alt="...hero-img-title...">
+                <img src="..." alt="...hero-img-title...">
             </div> -->
 
-            <div class="text-content">
+            <div class="text-content left">
                 <h1 class="margin-bottom">Hello World!</h1>
                 <p class="small margin-bottom-30">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi dignissimos cumque earum expedita modi repellat assumenda corrupti repudiandae non dolorem facilis sed eos?</p>
     
@@ -87,11 +87,11 @@
     <script src="js/gridbox.js"></script>
     <script>
 
-var menuToggle = im("#menu-toggle"),
-    subToggle = im(".sub-toggle"),
-    brand = im(".brandname").first(),
-    ovrly = im("#overlay"),
-    main = im(".main").first();
+    var menuToggle = im("#menu-toggle"),
+        subToggle = im(".sub-toggle"),
+        brand = im(".brandname").first(),
+        ovrly = im("#overlay"),
+        main = im(".main").first();
 
     menuToggle.click(function(){
         this.toggleClass("active");
