Update Carousel Functionalities

--- a/carousel.html
+++ b/carousel.html
@@ -72,6 +72,8 @@
 
             <div class="indicator">
                 <span></span>
+                <span></span>
+                <span></span>
             </div>
 
             <!-- 1st slide -->
