add card template, update carousel, add parallax effect

--- a/cards.html
+++ b/cards.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/gridbox.css">
-    <title>Showcase Section</title>
+    <title>Cards</title>
 </head>
 <body>
     <div class="container-fluid">
@@ -128,42 +128,37 @@
     </div> <!-- .container-fluid -->
 
 
-    <div class="container margin-top-45 margin-bottom-45">
+    <div class="container-fluid margin-top-45 margin-bottom-45">
         <div class="row">
-            <div class="col-5 bg-lightgray">
-                <div class="padding-around">
+            <div class="col-lap-4 col-lap-offset-1 col-tab-5 col-tab-offset-2 card bg-lightgray">
+                <img src="./img/sample-image-1.jpeg" alt="" class="card-image">
+                <h3 class="card-title">Card Title</h3>
+                <p class="card-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, et exercitationem laudantium reprehenderit quisquam cum quia commodi deserunt quae eius accusamus velit, facilis magnam cumque eveniet vero. At, corrupti eos.
-                </div>
+                </p>
+                <a href="#" class="btn btn-secondary">Click</a>
             </div>
-            <div class="col-6 bg-white">
-                <div class="padding-around">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, architecto? Eum nulla recusandae enim quo delectus, culpa quis quidem quam, voluptatem dolor, sapiente asperiores sunt ipsa consectetur? Neque, voluptatum non.
-                </div>
+
+            <div class="col-lap-4 col-lap-offset-1 col-tab-5 col-tab-offset-2 card bg-lightgray">
+                <img src="./img/sample-image-2.jpeg" alt="" class="card-image">
+                <h3 class="card-title">Card Title</h3>
+                <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, et exercitationem laudantium reprehenderit quisquam cum quia commodi deserunt quae eius accusamus velit.
+                </p>
+                <a href="#" class="btn btn-secondary">Click</a>
             </div>
-            <div class="col-5 bg-lightgray">
-                <div class="padding-around">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quas nihil, odio ea quidem porro corrupti numquam praesentium vitae dolor iste vel tempora recusandae laborum incidunt id. Sunt, illo fugiat!
-                </div>
+
+            <div class="col-lap-4 col-lap-offset-1 col-tab-5 col-tab-offset-2 card bg-lightgray">
+                <img src="./img/sample-image-3.jpeg" alt="" class="card-image">
+                <h3 class="card-title">Card Title</h3>
+                <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, et exercitationem laudantium reprehenderit quisquam cum quia commodi deserunt quae eius accusamus velit, facilis magnam cumque eveniet vero. At, corrupti eos.
+                </p>
+                <a href="#" class="btn btn-secondary">Click</a>
             </div>
+
         </div>
 
-        <div class="row">
-            <div class="col-5 bg-white">
-                <div class="padding-around">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, et exercitationem laudantium reprehenderit quisquam cum quia commodi deserunt quae eius accusamus velit, facilis magnam cumque eveniet vero. At, corrupti eos.
-                </div>
-            </div>
-            <div class="col-6 bg-lightgray">
-                <div class="padding-around">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, architecto? Eum nulla recusandae enim quo delectus, culpa quis quidem quam, voluptatem dolor, sapiente asperiores sunt ipsa consectetur? Neque, voluptatum non.
-                </div>
-            </div>
-            <div class="col-5 bg-white">
-                <div class="padding-around">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quas nihil, odio ea quidem porro corrupti numquam praesentium vitae dolor iste vel tempora recusandae laborum incidunt id. Sunt, illo fugiat!
-                </div>
-            </div>
-        </div>
     </div>
 
     <script src="js/gridbox.js"></script>
