--- a/carousel.html
+++ b/carousel.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/gridbox.css">
-    <title>Showcase Section</title>
+    <title>Showcase Carousel</title>
 </head>
 <body>
     <div class="container-fluid">
@@ -77,7 +77,7 @@
             </div>
 
             <!-- 1st slide -->
-            <div class="showcase bg-lightgray">
+            <div class="showcase-carousel default show bg-lightgray">
                 <!-- optional hero background image & image mask -->
                 <!-- <div class="hero-image">
                     <div class="mask"></div>
