--- a/parallax.html
+++ b/parallax.html
@@ -79,7 +79,7 @@
 
 
         <!-- Showcase Parallax -->
-        <div class="showcase-narrow bg-white parallax" id="p1" data-bgUrl="./img/sample-image-1.jpeg">
+        <div class="showcase bg-white parallax" id="p1" data-bgUrl="./img/sample-image-1.jpeg">
     
             <!-- optional background mask -->
             <div class="mask"></div>
@@ -140,6 +140,7 @@ var menuToggle = im("#menu-toggle"),
     // Parallax
 
     im("#p1").parallax();
+    
 
     </script>
 </body>
