--- a/parallax.html
+++ b/parallax.html
@@ -79,7 +79,7 @@
 
 
         <!-- Showcase Parallax -->
-        <div class="showcase bg-white parallax" id="p1" data-bgUrl="./img/sample-image-1.jpeg">
+        <div class="showcase bg-white parallax" id="p1" data-bgUrl="/img/sample-image-1.jpg">
     
             <!-- optional background mask -->
             <div class="mask"></div>
