fix login template issue

--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/gridbox.css">
+    <link rel="stylesheet" href="/css/gridbox.css">
     <title>Login Form</title>
 </head>
 <body class="bg-lightgray">
@@ -76,7 +76,7 @@
 
             </div>
 
-            <div id="login-toggle" class="login-toggler"><i class="fa fa-arrow-down" aria-hidden="true"></i></div>
+            <div id="login-toggle" class="login-toggle"><i class="fa fa-arrow-down" aria-hidden="true"></i></div>
 
             <!-- 2nd Panel -->
             <div class="login-form bg-white social-group" id="social-form">
