add footer template

--- a/cards.html
+++ b/cards.html
@@ -130,7 +130,7 @@
 
     <div class="container-fluid margin-top-45 margin-bottom-45">
         <div class="row">
-            <div class="col-lap-4 col-lap-offset-1 col-tab-5 col-tab-offset-2 card bg-lightgray">
+            <div class="col-offset-2 col-12 col-offset-2 col-lap-4 col-lap-offset-1 col-tab-5 col-tab-offset-2 card bg-lightgray">
                 <img src="/img/sample-image-1.jpg" alt="" class="card-image">
                 <h3 class="card-title">Card Title</h3>
                 <p class="card-text">
@@ -139,7 +139,7 @@
                 <a href="#" class="btn btn-secondary">Click</a>
             </div>
 
-            <div class="col-lap-4 col-lap-offset-1 col-tab-5 col-tab-offset-2 card bg-lightgray">
+            <div class="col-offset-2 col-12 col-offset-2 col-lap-4 col-lap-offset-1 col-tab-5 col-tab-offset-2 card bg-lightgray">
                 <img src="/img/sample-image-2.jpg" alt="" class="card-image">
                 <h3 class="card-title">Card Title</h3>
                 <p class="card-text">
@@ -148,7 +148,7 @@
                 <a href="#" class="btn btn-secondary">Click</a>
             </div>
 
-            <div class="col-lap-4 col-lap-offset-1 col-tab-5 col-tab-offset-2 card bg-lightgray">
+            <div class="col-offset-2 col-12 col-offset-2 col-lap-4 col-lap-offset-1 col-tab-5 col-tab-offset-2 card bg-lightgray">
                 <img src="/img/sample-image-3.jpg" alt="" class="card-image">
                 <h3 class="card-title">Card Title</h3>
                 <p class="card-text">
@@ -156,7 +156,6 @@
                 </p>
                 <a href="#" class="btn btn-secondary">Click</a>
             </div>
-
         </div>
 
     </div>
