--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
     <!-- card section -->
     <div class="container-fluid padding-top-45 padding-bottom-45 bg-white">
         <div class="row">
-            <div class="col-lap-4 col-lap-offset-1 col-tab-5 col-tab-offset-2 card bg-lightgray">
-                <img src="./img/sample-image-1.jpg" alt="" class="card-image">
+            <div class="col-offset-2 col-12 col-offset-2 col-lap-4 col-lap-offset-1 col-tab-5 col-tab-offset-2 card bg-lightgray">
+                <img src="/img/sample-image-1.jpg" alt="" class="card-image">
                 <h3 class="card-title">Card Title</h3>
                 <p class="card-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, et exercitationem laudantium reprehenderit quisquam cum quia commodi deserunt quae eius accusamus velit, facilis magnam cumque eveniet vero. At, corrupti eos.
@@ -141,8 +141,8 @@
                 <a href="#" class="btn btn-secondary">Click</a>
             </div>
 
-            <div class="col-lap-4 col-lap-offset-1 col-tab-5 col-tab-offset-2 card bg-lightgray">
-                <img src="./img/sample-image-2.jpg" alt="" class="card-image">
+            <div class="col-offset-2 col-12 col-offset-2 col-lap-4 col-lap-offset-1 col-tab-5 col-tab-offset-2 card bg-lightgray">
+                <img src="/img/sample-image-2.jpg" alt="" class="card-image">
                 <h3 class="card-title">Card Title</h3>
                 <p class="card-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, et exercitationem laudantium reprehenderit quisquam cum quia commodi deserunt quae eius accusamus velit.
@@ -150,15 +150,14 @@
                 <a href="#" class="btn btn-secondary">Click</a>
             </div>
 
-            <div class="col-lap-4 col-lap-offset-1 col-tab-5 col-tab-offset-2 card bg-lightgray">
-                <img src="./img/sample-image-3.jpg" alt="" class="card-image">
+            <div class="col-offset-2 col-12 col-offset-2 col-lap-4 col-lap-offset-1 col-tab-5 col-tab-offset-2 card bg-lightgray">
+                <img src="/img/sample-image-3.jpg" alt="" class="card-image">
                 <h3 class="card-title">Card Title</h3>
                 <p class="card-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, et exercitationem laudantium reprehenderit quisquam cum quia commodi deserunt quae eius accusamus velit, facilis magnam cumque eveniet vero. At, corrupti eos.
                 </p>
                 <a href="#" class="btn btn-secondary">Click</a>
             </div>
-
         </div>
     </div> <!-- .container-fluid -->
 
@@ -208,6 +207,63 @@
             </div>
         </div>
     </div>
+
+
+    <!-- footer -->
+    <footer class="footer bg-offblack">
+        <div class="row">
+            <div class="col-8 col-tab-4 padding-around-30">
+                <div class="margin-bottom-45">
+                    <h3 class="margin-bottom">Your Address</h3>
+                    <p>#1 Main St, New York</p>
+                    <p>NY, 10001</p>
+                </div>
+                <div>
+                    <h3 class="margin-bottom">Your Contact Information</h3>
+                    <p>Tel: (555)555-5555</p>
+                    <p>Email: asd@asd.com</p>
+                </div>
+            </div>
+            <div class="col-8 col-tab-4 padding-around-30 wg-social">
+                <h3>Your Social Media</h3>
+                <div class="icons">
+                    <a class="icon" id="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    <a class="icon" id="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                    <a class="icon" id="google-plus" href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                    
+                </div>
+                <div class="icons">
+                    <a class="icon" id="instagram" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a class="icon" id="weixin" href="#"><i class="fa fa-weixin" aria-hidden="true"></i></a>
+                    <a class="icon" id="weibo" href="#"><i class="fa fa-weibo" aria-hidden="true"></i></a>
+                </div>
+            </div>
+            <div class="col-12 col-tab-8 padding-around-30">
+                <h3>Contact Us</h3>
+                <form action="/" class="iconized margin-top">
+                    <!-- email -->
+                    <div class="form-group margin-bottom">
+                        <input type="email" class="form-input" id="email" name="email" placeholder="Email">
+                        <span class="input-icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
+                        <span class="input-icon check">
+                            <i class="fa fa-check-circle-o success" aria-hidden="true"></i>
+                            <i class="fa fa-times-circle-o fail" aria-hidden="true"></i>
+                        </span>
+                    </div>
+                    <!-- textarea -->
+                    <div class="form-group margin-bottom">
+                        <textarea type="text" class="form-input" id="textareaFormControl-1" placeholder="Enter text" rows="5"></textarea>
+                        <span class="input-icon"><i class="fa fa-font" aria-hidden="true"></i></span>
+                    </div>
+
+                    <a href="" class="btn btn-primary">Email Us</a>
+                </form>
+            </div>
+        </div>
+        <div class="copyright">
+            &copy; 2018 Gridbox | All right reserved
+        </div>
+    </footer>
 
     <script src="js/gridbox.js"></script>
     <script>
