add footer reveal effect

--- a/footer.html
+++ b/footer.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <footer class="footer-revealed bg-offblack">
+    <footer class="footer bg-offblack">
         <div class="row">
             <div class="col-8 col-tab-4 padding-around-30">
                 <div class="margin-bottom-45">
@@ -38,7 +38,7 @@
                     <a class="icon" id="weibo" href="#"><i class="fa fa-weibo" aria-hidden="true"></i></a>
                 </div>
             </div>
-            <div class="col-12 col-tab-8 padding-around-30">
+            <div class="col-16 col-tab-8 padding-around-30">
                 <h3>Contact Us</h3>
                 <form action="/" class="iconized margin-top">
                     <!-- email -->
