--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
 
     <!-- footer -->
-    <footer class="footer bg-offblack">
+    <footer class="footer bg-offblack" id="footer">
         <div class="row">
             <div class="col-8 col-tab-4 padding-around-30">
                 <div class="margin-bottom-45">
@@ -238,7 +238,7 @@
                     <a class="icon" id="weibo" href="#"><i class="fa fa-weibo" aria-hidden="true"></i></a>
                 </div>
             </div>
-            <div class="col-12 col-tab-8 padding-around-30">
+            <div class="col-16 col-tab-8 padding-around-30">
                 <h3>Contact Us</h3>
                 <form action="/" class="iconized margin-top">
                     <!-- email -->
@@ -271,6 +271,7 @@
     im("#navbar").navbar();
     im(".carousel").carousel();
     im("#parallax").parallax();
+    im("#footer").footer();
 
     </script>
 </body>
