fix footer reveal issue

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 </div>
             </div>
             <div class="col-8 col-tab-4 padding-around-30 wg-social">
-                <h3>Your Social Media</h3>
+                <h3 class="margin-bottom">Your Social Media</h3>
                 <div class="icons">
                     <a class="icon" id="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     <a class="icon" id="twitter" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
