add section title styling

--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
 
     <!-- grid section -->
     <section class="container padding-top-45 padding-bottom-45 bg-white">
-        <h2 class="section-title center-text padding-around-45 margin-bottom-30">Grid Section</h2>
+        <h2 class="section-title center-text padding-top-30 padding-bottom">Grid Section</h2>
+        <h5 class="section-subtitle center-text margin-bottom-45">Lorem ihsum dolor sit amet consectetur adipisicing elit. Optio esse aliquid praesentium molestias.</h5>
         <!-- top part -->
         <div class="grids grids-top">
             <div class="grid-left col-4">
